--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     header h1 { margin:0; font-size:32px; }
     header p { margin:5px 0 0; font-size:18px; }
     .container { width:90%; margin:20px auto; }
-    .products { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap:20px; }
+    .products { display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:20px; }
     .product { background:white; border-radius:10px; padding:15px; box-shadow:0 2px 5px rgba(0,0,0,0.1); text-align:center; }
-    .product img { max-width:100%; height:180px; object-fit:cover; border-radius:8px; }
+    .product img { max-width:100%; height:200px; object-fit:cover; border-radius:8px; }
     .product h3 { margin:10px 0 5px; font-size:18px; color:#333; }
     .product p { font-size:14px; color:#555; }
     .price { font-weight:bold; color:#e91e63; margin:8px 0; }
@@ -62,29 +62,29 @@
     const WHATSAPP_NUMBER = "5491131402267"; 
 
     const PRODUCTS = [
-      { name: "Kapping Gel", price: "ARS $33.600 (x12u)", description: "Gel constructor de alta duración, aporta resistencia y estructura a las uñas.", image: "img/kapping_gel.jpg", category: "Uñas" },
-      { name: "Via Láctea Rosa", price: "ARS $33.600 (x12u)", description: "Gel polish rosa con acabado profesional, larga duración y brillo intenso.", image: "img/via_lactea_rosa.jpg", category: "Uñas" },
-      { name: "Via Láctea Blanco", price: "ARS $33.600 (x12u)", description: "Gel polish blanco de cobertura uniforme, ideal para bases y diseños.", image: "img/via_lactea_blanco.jpg", category: "Uñas" },
-      { name: "Ojo de Gato Diamond - Rojo", price: "ARS $67.200 (x12u)", description: "Gel magnético con efecto ojo de gato, brillo intenso y acabado elegante.", image: "img/ojo_gato_rojo.jpg", category: "Uñas" },
-      { name: "Ojo de Gato Diamond - Gris", price: "ARS $67.200 (x12u)", description: "Gel magnético con efecto ojo de gato, estilo sofisticado con reflejos únicos.", image: "img/ojo_gato_gris.jpg", category: "Uñas" }
+      { name: "Kapping Gel", price: "ARS $33.600 (x12u)", description: "Gel constructor de alta duración, aporta resistencia y estructura a las uñas.", image: "img/kapping_gel.jpg" },
+      { name: "Via Láctea Rosa", price: "ARS $33.600 (x12u)", description: "Gel polish rosa con acabado profesional, larga duración y brillo intenso.", image: "img/via_lactea_rosa.jpg" },
+      { name: "Via Láctea Blanco", price: "ARS $33.600 (x12u)", description: "Gel polish blanco de cobertura uniforme, ideal para bases y diseños.", image: "img/via_lactea_blanco.jpg" },
+      { name: "Ojo de Gato Diamond - Rojo", price: "ARS $67.200 (x12u)", description: "Gel magnético con efecto ojo de gato, brillo intenso y acabado elegante.", image: "img/ojo_gato_rojo.jpg" },
+      { name: "Ojo de Gato Diamond - Gris", price: "ARS $67.200 (x12u)", description: "Gel magnético con efecto ojo de gato, estilo sofisticado con reflejos únicos.", image: "img/ojo_gato_gris.jpg" }
     ];
 
     const list = document.getElementById("product-list");
-    PRODUCTS.forEach(p => {
+
+    PRODUCTS.forEach(function(p) {
       const div = document.createElement("div");
       div.className = "product";
-      div.innerHTML = `
-        <img src="${p.image}" alt="${p.name}">
-        <h3>${p.name}</h3>
-        <p>${p.description}</p>
-        <p class="price">${p.price}</p>
-        <button onclick="buy('${p.name}')">Comprar</button>
-      `;
+      div.innerHTML = 
+        '<img src="' + p.image + '" alt="' + p.name + '">' +
+        '<h3>' + p.name + '</h3>' +
+        '<p>' + p.description + '</p>' +
+        '<p class="price">' + p.price + '</p>' +
+        '<button onclick="buy(\'' + p.name + '\')">Comprar</button>';
       list.appendChild(div);
     });
 
     function buy(productName) {
-      const url = `https://wa.me/${WHATSAPP_NUMBER}?text=Hola! Me interesa el producto: ${encodeURIComponent(productName)}`;
+      const url = "https://wa.me/" + WHATSAPP_NUMBER + "?text=Hola! Me interesa el producto: " + encodeURIComponent(productName);
       window.open(url, "_blank");
     }
   </script>
