--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     button { background:#e91e63; color:white; border:none; padding:10px 15px; border-radius:5px; cursor:pointer; }
     button:hover { background:#ad1457; }
     footer { margin-top:40px; text-align:center; padding:15px; background:#333; color:white; }
-    /* Botón flotante WhatsApp */
     .whatsapp-float {
       position: fixed; width: 60px; height: 60px; bottom: 20px; right: 20px;
       background-color: #25D366; border-radius: 50%; display:flex;
@@ -50,11 +49,10 @@
     <p>Contacto por WhatsApp: +54 11 3140 2267</p>
   </footer>
 
-  <!-- Botón flotante WhatsApp -->
   <a href="https://wa.me/5491131402267?text=Hola!%20Me%20interesa%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%20productos"
      class="whatsapp-float" target="_blank">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-      <path d="M16 .396C7.163.396.005 7.554.005 16.39c0 2.885.756 5.678 2.188 8.146L0 32l7.68-2.02a15.86 15.86 0 0 0 8.32 2.273h.007c8.837 0 16-7.159 16-15.896 0-4.262-1.66-8.268-4.677-11.29C24.268 2.056 20.262.396 16 .396zm0 29.073a13.1 13.1 0 0 1-6.72-1.836l-.48-.283-4.56 1.2 1.216-4.445-.312-.456a12.94 12.94 0 0 1-2.016-6.834c0-7.236 5.89-13.124 13.128-13.124 3.504 0 6.796 1.365 9.264 3.837a12.95 12.95 0 0 1 3.864 9.287c0 7.236-5.89 13.124-13.128 13.124zm7.224-9.796c-.396-.198-2.34-1.155-2.704-1.29-.3...
+      <path d="M16 .396C7.163.396.005 7.554.005 16.39c0 2.885.756 5.678 2.188 8.146L0 32l7.68-2.02a15.86 15.86 0 0 0 8.32 2.273h.007c8.837 0 16-7.159 16-15.896 0-4.262-1.66-8.268-4.677-11.29C24.268 2.056 20.262.396 16 .396zm0 29.073a13.1 13.1 0 0 1-6.72-1.836l-.48-.283-4.56 1.2 1.216-4.445-.312-.456a12.94 12.94 0 0 1-2.016-6.834c0-7.236 5.89-13.124 13.128-13.124 3.504 0 6.796 1.365 9.264 3.837a12.95 12.95 0 0 1 3.864 9.287c0 7.236-5.89 13.124-13.128 13.124zm7.224-9.796c-.396-.198-2.34-1.155-2.704-1.29-.3..."/>
     </svg>
   </a>
 
@@ -74,19 +72,35 @@
     PRODUCTS.forEach(function(p) {
       const div = document.createElement("div");
       div.className = "product";
-      div.innerHTML = 
-        '<img src="' + p.image + '" alt="' + p.name + '">' +
-        '<h3>' + p.name + '</h3>' +
-        '<p>' + p.description + '</p>' +
-        '<p class="price">' + p.price + '</p>' +
-        '<button onclick="buy(\'' + p.name + '\')">Comprar</button>';
+
+      const img = document.createElement("img");
+      img.src = p.image;
+      img.alt = p.name;
+      div.appendChild(img);
+
+      const h3 = document.createElement("h3");
+      h3.textContent = p.name;
+      div.appendChild(h3);
+
+      const desc = document.createElement("p");
+      desc.textContent = p.description;
+      div.appendChild(desc);
+
+      const price = document.createElement("p");
+      price.className = "price";
+      price.textContent = p.price;
+      div.appendChild(price);
+
+      const btn = document.createElement("button");
+      btn.textContent = "Comprar";
+      btn.onclick = function() {
+        const url = "https://wa.me/" + WHATSAPP_NUMBER + "?text=Hola! Me interesa el producto: " + encodeURIComponent(p.name);
+        window.open(url, "_blank");
+      };
+      div.appendChild(btn);
+
       list.appendChild(div);
     });
-
-    function buy(productName) {
-      const url = "https://wa.me/" + WHATSAPP_NUMBER + "?text=Hola! Me interesa el producto: " + encodeURIComponent(productName);
-      window.open(url, "_blank");
-    }
   </script>
 </body>
 </html>
