--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pure Glam - Tienda Online</title>
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <meta name="description" content="✨ Pure Glam Mayorista de Uñas ✨ Distribuidora especializada en insumos profesionales de alta calidad para manicura, pedicura y nail art. Venta al por mayor con envíos rápidos a todo el país.">
+  <meta name="keywords" content="uñas, pure glam, mayorista uñas, kapping gel, gel polish, esmaltes, nail art, acrílicos, manicura, pedicura">
   <style>
     body { font-family: Arial, sans-serif; margin:0; padding:0; background:#fafafa; }
     header {
@@ -23,6 +26,8 @@
     button { background:#e91e63; color:white; border:none; padding:10px 15px; border-radius:5px; cursor:pointer; }
     button:hover { background:#ad1457; }
     footer { margin-top:40px; text-align:center; padding:15px; background:#333; color:white; }
+    footer a { color:#fff; text-decoration:none; }
+    footer a:hover { text-decoration:underline; }
     .whatsapp-float {
       position: fixed; width: 60px; height: 60px; bottom: 20px; right: 20px;
       background-color: #25D366; border-radius: 50%; display:flex;
@@ -37,7 +42,18 @@
   <header>
     <img src="img/logo.jpg" alt="Pure Glam Logo">
     <h1>Pure Glam</h1>
-    <p>Productos profesionales para uñas</p>
+    <p>✨ Pure Glam Mayorista de Uñas ✨</p>
+    <p style="font-size:16px; margin-top:10px; max-width:800px; margin-left:auto; margin-right:auto;">
+      Somos una distribuidora especializada en productos para uñas al por mayor, ofreciendo insumos profesionales de alta calidad para manicura, pedicura y nail art. 
+      Contamos con una amplia variedad de geles, esmaltes, acrílicos, herramientas y accesorios para salones de belleza, profesionales y revendedores.
+    </p>
+    <ul style="text-align:left; display:inline-block; margin-top:10px; font-size:15px; line-height:1.6;">
+      <li>✅ Precios mayoristas competitivos</li>
+      <li>✅ Productos de marcas reconocidas</li>
+      <li>✅ Atención personalizada</li>
+      <li>✅ Envíos rápidos a todo el país</li>
+    </ul>
+    <p style="margin-top:10px;">Con Pure Glam llevás tu negocio al próximo nivel con insumos confiables y modernos. 💅</p>
   </header>
 
   <div class="container">
@@ -46,13 +62,15 @@
   </div>
 
   <footer>
-    <p>Contacto por WhatsApp: +54 11 3140 2267</p>
+    <p>📧 <a href="mailto:Pureglam336@gmail.com">Pureglam336@gmail.com</a></p>
+    <p>📱 <a href="https://wa.me/5491131402267" target="_blank">+54 11 3140 2267</a></p>
+    <p>📸 <a href="https://instagram.com/Pureglam_mayorista" target="_blank">@Pureglam_mayorista</a></p>
   </footer>
 
   <a href="https://wa.me/5491131402267?text=Hola!%20Me%20interesa%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%20productos"
      class="whatsapp-float" target="_blank">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-      <path d="M16 .396C7.163.396.005 7.554.005 16.39c0 2.885.756 5.678 2.188 8.146L0 32l7.68-2.02a15.86 15.86 0 0 0 8.32 2.273h.007c8.837 0 16-7.159 16-15.896 0-4.262-1.66-8.268-4.677-11.29C24.268 2.056 20.262.396 16 .396zm0 29.073a13.1 13.1 0 0 1-6.72-1.836l-.48-.283-4.56 1.2 1.216-4.445-.312-.456a12.94 12.94 0 0 1-2.016-6.834c0-7.236 5.89-13.124 13.128-13.124 3.504 0 6.796 1.365 9.264 3.837a12.95 12.95 0 0 1 3.864 9.287c0 7.236-5.89 13.124-13.128 13.124zm7.224-9.796c-.396-.198-2.34-1.155-2.704-1.29-.3..."/>
+      <path d="M16 .396C7.163.396.005 7.554.005 16.39c0 2.885.756 5.678 2.188 8.146L0 32l7.68-2.02a15.86 15.86 0 0 0 8.32 2.273h.007c8.837 0 16-7.159 16-15.896 0-4.262-1.66-8.268-4.677-11.29C24.268 2.056 20.262.396 16 .396zm0 29.073a13.1 13.1 0 0 1-6.72-1.836l-.48-.283-4.56 1.2 1.216-4.445-.312-.456a12.94 12.94 0 0 1-2.016-6.834c0-7.236 5.89-13.124 13.128-13.124 3.504 0 6.796 1.365 9.264 3.837a12.95 12.95 0 0 1 3.864 9.287c0 7.236-5.89 13.124-13.128 13.124zm7.224-9.796c-.396-.198-2.34-1.155-2.704-1.29-.3...
     </svg>
   </a>
 
