--- a/index.html
+++ b/index.html
@@ -3,91 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pure Glam - Tienda Online</title>
+  <meta name="description" content="✨ Pure Glam Mayorista de Uñas ✨ Distribuidora de insumos profesionales de alta calidad para uñas.">
+  <title>Pure Glam - Mayorista de Uñas</title>
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-  <meta name="description" content="✨ Pure Glam Mayorista de Uñas ✨ Distribuidora especializada en insumos profesionales de alta calidad para manicura, pedicura y nail art. Venta al por mayor con envíos rápidos a todo el país.">
-  <meta name="keywords" content="uñas, pure glam, mayorista uñas, kapping gel, gel polish, esmaltes, nail art, acrílicos, manicura, pedicura">
   <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#fafafa; }
-    header {
-      background: linear-gradient(135deg, #e91e63, #c2185b);
-      color:white; padding:30px 20px; text-align:center;
-    }
-    header img { max-height:120px; margin-bottom:15px; }
-    header h1 { margin:0; font-size:32px; }
-    header p { margin:5px 0 0; font-size:18px; }
-    .container { width:90%; margin:20px auto; }
-    .products { display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:20px; }
-    .product { background:white; border-radius:10px; padding:15px; box-shadow:0 2px 5px rgba(0,0,0,0.1); text-align:center; }
-    .product img { max-width:100%; height:200px; object-fit:cover; border-radius:8px; }
-    .product h3 { margin:10px 0 5px; font-size:18px; color:#333; }
-    .product p { font-size:14px; color:#555; }
-    .price { font-weight:bold; color:#e91e63; margin:8px 0; }
-    button { background:#e91e63; color:white; border:none; padding:10px 15px; border-radius:5px; cursor:pointer; }
-    button:hover { background:#ad1457; }
-    footer { margin-top:40px; text-align:center; padding:15px; background:#333; color:white; }
-    footer a { color:#fff; text-decoration:none; }
+    body { margin:0; font-family: Arial, sans-serif; background:#fff; color:#333; }
+    header { background:#d81b60; color:white; text-align:center; padding:20px; }
+    header img { width:120px; border-radius:10px; margin-bottom:10px; }
+    h1 { margin:0; font-size:2em; }
+    h2 { margin-top:10px; }
+    .description { max-width:800px; margin:20px auto; line-height:1.6; text-align:center; }
+    .description ul { list-style:none; padding:0; text-align:left; display:inline-block; }
+    .description ul li { margin:5px 0; }
+    .catalog { padding:20px; }
+    .products { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap:20px; }
+    .product { border:1px solid #ddd; border-radius:10px; padding:15px; text-align:center; background:white; }
+    .product img { max-width:100%; border-radius:8px; }
+    footer { background:#333; color:white; text-align:center; padding:15px; }
+    footer a { color:white; text-decoration:none; margin:0 5px; }
     footer a:hover { text-decoration:underline; }
-    .whatsapp-float {
-      position: fixed; width: 60px; height: 60px; bottom: 20px; right: 20px;
-      background-color: #25D366; border-radius: 50%; display:flex;
-      align-items:center; justify-content:center; box-shadow:2px 2px 5px rgba(0,0,0,0.3);
-      text-decoration:none; z-index:100;
-    }
-    .whatsapp-float svg { width:32px; height:32px; fill:white; }
-    .whatsapp-float:hover { background-color:#1ebe5d; }
+    button { background:#d81b60; color:white; border:none; padding:10px 15px; border-radius:5px; cursor:pointer; margin-top:10px; }
+    button:hover { background:#ad1457; }
   </style>
 </head>
 <body>
   <header>
     <img src="img/logo.jpg" alt="Pure Glam Logo">
     <h1>Pure Glam</h1>
-    <p>✨ Pure Glam Mayorista de Uñas ✨</p>
-    <p style="font-size:16px; margin-top:10px; max-width:800px; margin-left:auto; margin-right:auto;">
-      Somos una distribuidora especializada en productos para uñas al por mayor, ofreciendo insumos profesionales de alta calidad para manicura, pedicura y nail art. 
-      Contamos con una amplia variedad de geles, esmaltes, acrílicos, herramientas y accesorios para salones de belleza, profesionales y revendedores.
-    </p>
-    <ul style="text-align:left; display:inline-block; margin-top:10px; font-size:15px; line-height:1.6;">
-      <li>✅ Precios mayoristas competitivos</li>
-      <li>✅ Productos de marcas reconocidas</li>
-      <li>✅ Atención personalizada</li>
-      <li>✅ Envíos rápidos a todo el país</li>
-    </ul>
-    <p style="margin-top:10px;">Con Pure Glam llevás tu negocio al próximo nivel con insumos confiables y modernos. 💅</p>
+    <h2>✨ Pure Glam Mayorista de Uñas ✨</h2>
+    <div class="description">
+      <p>Somos una distribuidora especializada en productos para uñas al por mayor, ofreciendo insumos profesionales de alta calidad para manicura, pedicura y nail art. Contamos con una amplia variedad de geles, esmaltes, acrílicos, herramientas y accesorios para salones de belleza, profesionales y revendedores.</p>
+      <ul>
+        <li>✅ Precios mayoristas competitivos</li>
+        <li>✅ Productos de marcas reconocidas</li>
+        <li>✅ Atención personalizada</li>
+        <li>✅ Envíos rápidos a todo el país</li>
+      </ul>
+      <p><b>Con Pure Glam llevás tu negocio al próximo nivel con insumos confiables y modernos. 💅</b></p>
+    </div>
   </header>
 
-  <div class="container">
+  <section class="catalog">
     <h2>Catálogo</h2>
     <div class="products" id="product-list"></div>
-  </div>
+  </section>
 
   <footer>
-    <p>📧 <a href="mailto:Pureglam336@gmail.com">Pureglam336@gmail.com</a></p>
-    <p>📱 <a href="https://wa.me/5491131402267" target="_blank">+54 11 3140 2267</a></p>
-    <p>📸 <a href="https://instagram.com/Pureglam_mayorista" target="_blank">@Pureglam_mayorista</a></p>
+    <p>
+      📧 <a href="mailto:Pureglam336@gmail.com">Pureglam336@gmail.com</a> | 
+      📱 <a href="https://wa.me/5491131402267" target="_blank">WhatsApp</a> | 
+      📸 <a href="https://instagram.com/Pureglam_mayorista" target="_blank">Instagram</a>
+    </p>
   </footer>
 
-  <a href="https://wa.me/5491131402267?text=Hola!%20Me%20interesa%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%20productos"
-     class="whatsapp-float" target="_blank">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-      <path d="M16 .396C7.163.396.005 7.554.005 16.39c0 2.885.756 5.678 2.188 8.146L0 32l7.68-2.02a15.86 15.86 0 0 0 8.32 2.273h.007c8.837 0 16-7.159 16-15.896 0-4.262-1.66-8.268-4.677-11.29C24.268 2.056 20.262.396 16 .396zm0 29.073a13.1 13.1 0 0 1-6.72-1.836l-.48-.283-4.56 1.2 1.216-4.445-.312-.456a12.94 12.94 0 0 1-2.016-6.834c0-7.236 5.89-13.124 13.128-13.124 3.504 0 6.796 1.365 9.264 3.837a12.95 12.95 0 0 1 3.864 9.287c0 7.236-5.89 13.124-13.128 13.124zm7.224-9.796c-.396-.198-2.34-1.155-2.704-1.29-.3...
-    </svg>
-  </a>
-
   <script>
-    const WHATSAPP_NUMBER = "5491131402267"; 
+    const WHATSAPP_NUMBER = "5491131402267";
 
     const PRODUCTS = [
-      { name: "Kapping Gel", price: "ARS $33.600 (x12u)", description: "Gel constructor de alta duración, aporta resistencia y estructura a las uñas.", image: "img/kapping_gel.jpg" },
-      { name: "Via Láctea Rosa", price: "ARS $33.600 (x12u)", description: "Gel polish rosa con acabado profesional, larga duración y brillo intenso.", image: "img/via_lactea_rosa.jpg" },
-      { name: "Via Láctea Blanco", price: "ARS $33.600 (x12u)", description: "Gel polish blanco de cobertura uniforme, ideal para bases y diseños.", image: "img/via_lactea_blanco.jpg" },
-      { name: "Ojo de Gato Diamond - Rojo", price: "ARS $67.200 (x12u)", description: "Gel magnético con efecto ojo de gato, brillo intenso y acabado elegante.", image: "img/ojo_gato_rojo.jpg" },
-      { name: "Ojo de Gato Diamond - Gris", price: "ARS $67.200 (x12u)", description: "Gel magnético con efecto ojo de gato, estilo sofisticado con reflejos únicos.", image: "img/ojo_gato_gris.jpg" }
+      { name:"Kapping Gel", price:"ARS $33.600 (x12u)", description:"Gel constructor de alta duración, aporta resistencia y estructura a las uñas.", image:"img/kapping_gel.jpg" },
+      { name:"Vía Láctea Rosa", price:"ARS $33.600 (x12u)", description:"Gel polish rosa con acabado profesional, larga duración y brillo intenso.", image:"img/via_lactea_rosa.jpg" },
+      { name:"Vía Láctea Blanco", price:"ARS $33.600 (x12u)", description:"Gel polish blanco de cobertura uniforme, ideal para bases y diseños.", image:"img/via_lactea_blanco.jpg" },
+      { name:"Ojo de Gato Diamond - Rojo", price:"ARS $67.200 (x12u)", description:"Gel magnético con efecto ojo de gato, brillo intenso y acabado elegante.", image:"img/ojo_gato_rojo.jpg" },
+      { name:"Ojo de Gato Diamond - Gris", price:"ARS $67.200 (x12u)", description:"Gel magnético con efecto ojo de gato, estilo sofisticado y moderno.", image:"img/ojo_gato_gris.jpg" }
     ];
 
     const list = document.getElementById("product-list");
 
-    PRODUCTS.forEach(function(p) {
+    PRODUCTS.forEach(p => {
       const div = document.createElement("div");
       div.className = "product";
 
@@ -105,15 +87,13 @@
       div.appendChild(desc);
 
       const price = document.createElement("p");
-      price.className = "price";
       price.textContent = p.price;
       div.appendChild(price);
 
       const btn = document.createElement("button");
       btn.textContent = "Comprar";
-      btn.onclick = function() {
-        const url = "https://wa.me/" + WHATSAPP_NUMBER + "?text=Hola! Me interesa el producto: " + encodeURIComponent(p.name);
-        window.open(url, "_blank");
+      btn.onclick = () => {
+        window.open(`https://wa.me/${WHATSAPP_NUMBER}?text=Hola! Quiero comprar: ${p.name} - ${p.price}`, "_blank");
       };
       div.appendChild(btn);
 
